<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kalcylator"
        android:id="@+id/calc_tv"
        android:layout_marginTop="10dp"
        android:layout_marginStart="150dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_height="wrap_content"
        android:hint="0"
        android:id="@+id/calc_first_edt"
        android:layout_marginStart="20dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/calc_second_edt"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="330dp"
        android:hint="0" />

    <TextView
        android:id="@+id/calc_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="="
        android:layout_marginStart="150dp"
        android:textSize="30sp"
        android:layout_marginTop="330dp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calc_result_tv"
        android:gravity="center"
        android:layout_marginTop="336dp"
        android:layout_marginStart="170dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/add"
        android:text="add"
        android:textSize="10sp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginStart="100dp"/>

    <Button
        android:id="@+id/btn_divide"
        android:text="divide"
        android:textSize="10sp"
        android:layout_marginStart="10dp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp" />

    <Button
        android:id="@+id/btn_multiply"
        android:text="multiply"
        android:textSize="10sp"
        android:layout_marginStart="190dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp" />

    <Button
        android:id="@+id/btn_minus"
        android:text="minus"
        android:textSize="10sp"
        android:layout_marginStart="290dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp" />

    <Button
        android:id="@+id/btn_clear"
        android:text="clear"
        android:textSize="10sp"
        android:layout_marginStart="150dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp" />
</FrameLayout>